--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ li {
 
 p.h1-eng {
   position: absolute;
-  top: 150px;
+  top: calc(80% - 100px);
   width: 100%;
   font-size: 35px;
   z-index: 3;
@@ -90,7 +90,7 @@ p.h1-eng {
 
 h1.h1-kor {
   position: absolute;
-  top: 200px;
+  top: calc(80% - 50px);
   width: 100%;
   font-size: 35px;
   z-index: 3;
@@ -105,7 +105,7 @@ h1.h1-kor {
 .login-section__container {
   position: absolute;
   top: 20%;
-  left: 5%;
+  left: 10%;
   width: 500px;
   height: 65%;
   border-radius: 12px;
@@ -135,7 +135,7 @@ h1.h1-kor {
 }
 
 .logo__container img {
-  width: 100px;
+  width: 130px;
   animation: logoSizeChange 1.5s ease 1;
 }
 
@@ -145,10 +145,11 @@ h1.h1-kor {
   position: absolute;
   top: 85%;
   left: 5%;
-  z-index: 4;
+  z-index: 3;
   width: 90%;
   height: 2px;
   background-color: #ddd;
+  animation: fadeIn 2.5s ease 1;
 }
 
 .sublogo {
@@ -232,11 +233,12 @@ select:valid {
 }
 
 .notice .notice__phrase {
-  width: 90%;
-  margin-left: 5%;
+  width: 80%;
+  margin-left: 10%;
   font-size: 13px;
   text-align: center;
   margin-top: 30px;
+  word-break: keep-all;
 }
 
 .notice .notice__copyright {
@@ -245,9 +247,6 @@ select:valid {
   margin-top: 50px;
 }
 
-.copyright__logo {
-  width: 100px;
-}
 
 @keyframes logoSizeChange {
   0% {
@@ -260,6 +259,20 @@ select:valid {
 
   100% {
     transform: scale(1);
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    background-color: transparent;
+  }
+
+  30% {
+    background-color: transparent;
+  }
+
+  100% {
+    background-color: #ddd;
   }
 }
 
@@ -331,13 +344,12 @@ select:valid {
 
   .notice .notice__phrase {
     font-size: 12px;
+    width: 90%;
+    margin-left: 5%;
   }
 
   .notice .notice__copyright {
     font-size: 11px;
   }
 
-  .copyright__logo {
-    width: 85px;
-  }
 }
